# ros2_zebra_zero

./: .gitignore  CMakeLists.txt  arm.urdf  notes.txt  package.xml  zebra_zero.xml
.devcontainer/: Dockerfile  devcontainer.json
config/: zebra_zero.yaml  zebra_zero_position.yaml
include/: constants.h  controller.h  hal.h  hardware.h  mock-hardware.h  mock.h  module.h  nmc.h  real-hardware.h  servo.h  stepper.h
launch/: zebra_zero.launch.py
libnmc/: Makefile
scripts/: action.py  any.py  deactivate_controllers.sh  go_home.sh  go_up.sh  home.py  main.py  path.py  rotate_slowly.sh  stop_rotating.sh  switch_controller.sh  switch_to_cartesian.sh  switch_to_position.sh  switch_to_trajectory.sh  switch_to_velocity.sh  switch_to_zerog.sh
src/: arm.cpp  controller.cpp  hal.cpp  hardware.cpp  mock-hal.cpp  mock.cpp  nmc.cpp  real-hal.cpp  servo.cpp  zebra_zero_node.cpp
urdf/: ZebraBase.stl  ZebraLinkOne.stl  ZebraLinkThree.stl  ZebraLinkTwo.stl  arm.urdf  arm.urdf.xacro
